--- a/config.conf
+++ b/config.conf
@@ -2,7 +2,7 @@ style: "https://optgeo.github.io/shizen/style.json"
 accessToken: pk.eyJ1IjoiaGZ1IiwiYSI6ImlRSGJVUTAifQ.rTx380smyvPc1gUfZv1cmw
 showMarkers: false
 theme: dark
-use3dTerrain: true
+#use3dTerrain: true
 title: 地図表現のテスト
 subtitle: mapbox/storytelling の活用
 byline: by the United Nations Vector Tile Toolkit community
